# RustGesture

./: ASYNC_EVENT_PROCESSING.md  CLAUDE.md  Cargo.toml  FINAL_OPTIMIZATION.md  KEYBOARD_SHORTCUTS.md  MESSAGE_LOOP_FIX.md  MOUSE_HOOK_OPTIMIZATION.md  MVP_COMPLETED.md  MVP_IMPLEMENTATION.md  MVP_PROGRESS.md  NEXT_STEPS.md  PERFORMANCE_MONITORING.md  PHASES_COMPLETED.md  README.md  TRAY_FIX.md  ULTIMATE_OPTIMIZATION.md  build.rs
.claude/: settings.json  settings.local.json
docs/plans/: 2026-04-01-wgestures-style-config-ui.md  2026-04-04-gesture-name-and-capture.md  2026-04-14-gesture-overlay-design.md
docs/superpowers/plans/: 2026-04-04-trigger-button-per-gesture.md
docs/superpowers/specs/: 2026-04-04-trigger-button-per-gesture-design.md
examples/: config.json
openspec/changes/implement-mouse-gesture-software/: design.md  proposal.md  tasks.md
openspec/changes/implement-mouse-gesture-software/specs/configuration-management/: spec.md
openspec/changes/implement-mouse-gesture-software/specs/gesture-recognition/: spec.md
openspec/changes/implement-mouse-gesture-software/specs/input-simulation/: spec.md
openspec/changes/implement-mouse-gesture-software/specs/ui-management/: spec.md
src/: lib.rs  main.rs
src/config/: config.rs  manager.rs  mod.rs
src/core/: app.rs  capture.rs  executor.rs  gesture.rs  hook_callback.rs  intent.rs  mod.rs  parser.rs  recognizer.rs  tracker.rs
src/ui/: config_dialog.rs  gesture_app.slint  mod.rs  tray.rs
src/winapi/: helpers.rs  hook.rs  input.rs  message_loop.rs  mod.rs  overlay.rs
