[package]
name = "rustgesture"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A modern mouse gesture software for Windows in Rust"
license = "MIT"
repository = "https://github.com/yourusername/RustGesture"

[dependencies]
# Windows API bindings
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"
